--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "private": true,
     "type": "module",
     "scripts": {
-    "dev": "vite",
-},
+        "dev": "vite"
+    },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
         "autoprefixer": "^10.4.21",
